add tagSplit and ignore feature

--- a/zabbix_robot.conf
+++ b/zabbix_robot.conf
@@ -4,11 +4,16 @@ url    = /alert
 header_fingerprint_key   = _fingerPrint
 header_fingerprint_value = zabbix_robot
 
+ignore_status = {"OK": ["Not classified"]}
+
 msg_regexp_ok_header = OK
 msg_regexp_ok_compile = \{\s?"EventType":"(?P<EventType>.*?)",\s?"EventID":"(?P<EventID>.*?)",\s?"Severity":"(?P<Severity>.*?)",\s?"Status":"(?P<Status>.*?)",\s?"HostName":"(?P<HostName>.*?)",\s?"HostIP":"(?P<HostIP>.*?)",\s?"RecoverTime":"(?P<EventTime>.*?)",\s?"EventItem":"(?P<EventItem>.*?)",\s?"Details":"(?P<Details>.*?)",\s?"Channel":"(?P<Channel>.*?)"\s?\}
 
 msg_regexp_problem_header = Problem
 msg_regexp_problem_compile = \{\s?"EventType":"(?P<EventType>.*?)",\s?"EventID":"(?P<EventID>.*?)",\s?"Severity":"(?P<Severity>.*?)",\s?"Status":"(?P<Status>.*?)",\s?"HostName":"(?P<HostName>.*?)",\s?"HostIP":"(?P<HostIP>.*?)",\s?"EventTime":"(?P<EventTime>.*?)",\s?"EventItem":"(?P<EventItem>.*?)",\s?"Details":"(?P<Details>.*?)",\s?"Channel":"(?P<Channel>.*?)"\s?\}
+
+[tagconv]
+EventType = (?P<Key>.*?):\s?(?P<Value>.*?)(?:,|$)
 
 [log]
 # 配置日志级别
@@ -23,7 +28,7 @@ msg_regexp_problem_compile = \{\s?"EventType":"(?P<EventType>.*?)",\s?"EventID":
 logLevel = 5
 # 选择将日志记录到文件，并且设置日志文件路径
 # 如果不设置此参数，则将日志显示于 setout
-# logFile = ./mytest.log
+logFile = ./mytest.log
 
 [relay]
 relayInhibitionEventType    = "EventType:系统"
