fix relayInhibitionEventType from string to map[string]string

--- a/zabbix_robot.conf
+++ b/zabbix_robot.conf
@@ -31,7 +31,7 @@ logLevel = 5
 logFile = ./mytest.log
 
 [relay]
-relayInhibitionEventType    = "EventType:系统"
+relayInhibitionEventType    = "系统"
 relayInhibitionEventID      = "00000-1"
 relayInhibitionStatus       = "Problem"
 relayInhibitionHostName     = "ZBX_监控服务器_196.1.1.27"
