add ignore for list, fix parallel bench problem

--- a/zabbix_robot.conf
+++ b/zabbix_robot.conf
@@ -14,7 +14,7 @@ msg_regexp_problem_header = Problem
 msg_regexp_problem_compile = \{\s?"EventType":"(?P<EventType>.*?)",\s?"EventID":"(?P<EventID>.*?)",\s?"Severity":"(?P<Severity>.*?)",\s?"Status":"(?P<Status>.*?)",\s?"HostName":"(?P<HostName>.*?)",\s?"HostIP":"(?P<HostIP>.*?)",\s?"EventTime":"(?P<EventTime>.*?)",\s?"EventItem":"(?P<EventItem>.*?)",\s?"Details":"(?P<Details>.*?)",\s?"Channel":"(?P<Channel>.*?)"\s?\}
 
 [ignore]
-ignore_setting = {"Ignore": "test"}
+ignore_setting = {"EventID": ["251385-20376307","251385-20376308"]}
 
 [tagconv]
 EventType = (?P<Key>.*?):\s?(?P<Value>.*?)(?:,|$)
@@ -25,10 +25,30 @@ limit_threshold = 10
 inhibit_interval = 20
 inhibit_threshold = 20
 
-[role.EventItem]
+[role.EventItem1]
+severity = LEVEL1
 weight = 1
 field = EventItem
 expression = ^.*检查1端口.*$
+
+[role.EventItem2]
+severity = LEVEL2
+weight = 2
+field = EventItem
+expression = ^.*检查2端口.*$
+
+[role.EventItem3]
+severity = LEVEL3
+weight = 3
+field = EventItem
+expression = ^.*检查3端口.*$
+
+[role.EventItem4]
+severity = LEVEL4
+weight = 4
+field = EventItem
+expression = ^.*检查3端口.*$
+
 
 [relay]
 relay_inhibit_EventType = "系统"
