--- a/zabbix_robot.conf.sample
+++ b/zabbix_robot.conf.sample
@@ -13,8 +13,11 @@ msg_regexp_ok_compile = \{\s?"EventType":"(?P<EventType>.*?)",\s?"EventID":"(?P<
 msg_regexp_problem_header = Problem
 msg_regexp_problem_compile = \{\s?"EventType":"(?P<EventType>.*?)",\s?"EventID":"(?P<EventID>.*?)",\s?"Severity":"(?P<Severity>.*?)",\s?"Status":"(?P<Status>.*?)",\s?"HostName":"(?P<HostName>.*?)",\s?"HostIP":"(?P<HostIP>.*?)",\s?"EventTime":"(?P<EventTime>.*?)",\s?"EventItem":"(?P<EventItem>.*?)",\s?"Details":"(?P<Details>.*?)",\s?"Channel":"(?P<Channel>.*?)"\s?\}
 
-[ignore]
-ignore_setting = {"EventID": ["251385-20376307","251385-20376308"]}
+[ignore.role1]
+role = {"EventID":["251385-20376307","251385-20376308"],"Severity": ["warn"]}
+
+[ignore.role]
+role = {"Severity": ["info"]}
 
 [tagconv]
 EventType = (?P<Key>.*?):\s?(?P<Value>.*?)(?:,|$)
